Creating Landing Page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
+
+# Build settings
+markdown: kramdown
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
@@ -8,7 +11,15 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Recherch&eacute; Travel
+
+## Site Settings ##
+title: Recherch&eacute; Travel
+description: > # this means to ignore newlines until "baseurl:"
+  Recherch&eacute; Travel is focused on travel for the adventurous at heart.  Recherch&eacute; in
+  itself means rare, exotic or obscure and that's exactly how my family and I love to travel.  This 
+  travel blog is based on our personal experiences traveling around the world to over 60 different 
+  countries as three blonde women ALONE!
+url: "http://www.recherchetravel.com" # the base hostname & protocol for your site
 tagline: Uniquely Wild Travel for the Exceptional Traveler
 author :
   name : Kristan Armstrong
