--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ author :
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
 production_url : http://username.github.io
+baseurl: /RechurcheTravel
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
