--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
-# This is the default format. 
+# This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
 
 # Build settings
 markdown: kramdown
 markdown: redcarpet
-permalink: /:categories/:year/:month/:day/:title 
+permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: rouge
 
-# Themes are encouraged to use these universal variables 
+# Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
 
@@ -17,8 +17,8 @@ highlighter: rouge
 title: Recherch&eacute; Travel
 description: > # this means to ignore newlines until "baseurl:"
   Recherch&eacute; Travel is focused on travel for the adventurous at heart.  Recherch&eacute; in
-  itself means rare, exotic or obscure and that's exactly how my family and I love to travel.  This 
-  travel blog is based on our personal experiences traveling around the world to over 60 different 
+  itself means rare, exotic or obscure and that's exactly how my family and I love to travel.  This
+  travel blog is based on our personal experiences traveling around the world to over 60 different
   countries as three blonde women ALONE!
 url: "http://www.recherchetravel.com" # the base hostname & protocol for your site
 tagline: Uniquely Wild Travel for the Exceptional Traveler
@@ -29,9 +29,9 @@ author :
   github : KristanArmstrong
   twitter : username
   feedburner : feedname
-  
+
 # The production_url is only used when full-domain names are needed
-# such as sitemap.txt 
+# such as sitemap.txt
 # Most places will/should use BASE_PATH to make the urls
 #
 # If you have set a CNAME (pages.github.com) set your custom domain here.
@@ -40,6 +40,31 @@ author :
 #
 production_url : http://username.github.io
 baseurl: ''
+
+### Picture Gallery ###
+gallery:
+  # path to the gallery
+  dir: pictures
+  # title for gallery index
+  title: "Photos"
+  # title prefix for gallery page. title=title_prefix+gallery_name
+  title_prefix: "Photos: "
+  # field to control sorting of galleries for the index page
+  # (possible values are: title, date_time, best_image)
+  sort_field: "date_time"
+  # sizes for thumbnails
+  thumbnail_size:
+    x: 400
+    y: 400
+  # custom configuration for individual gallery
+  # best_image is image for the index page (defaults to last image)
+  galleries:
+    middle_east:
+      best_image: middle_east.jpg
+    south_pacific:
+      best_image: south_pacific.jpg
+    best:
+      best_image: DSC08351.JPG
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -51,11 +76,11 @@ JB :
   # however this value will be dynamically changed depending on your deployment situation.
   #
   # CNAME (http://yourcustomdomain.com)
-  #   DO NOT SET BASE_PATH 
+  #   DO NOT SET BASE_PATH
   #   (urls will be prefixed with "/" and work relatively)
   #
   # GitHub Pages (http://username.github.io)
-  #   DO NOT SET BASE_PATH 
+  #   DO NOT SET BASE_PATH
   #   (urls will be prefixed with "/" and work relatively)
   #
   # GitHub Project Pages (http://username.github.io/project-name)
@@ -74,7 +99,7 @@ JB :
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
   #
   # Override this by defining an absolute path to assets here.
-  # ex: 
+  # ex:
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
@@ -106,39 +131,38 @@ JB :
       num_posts: 5
       width: 580
       colorscheme: light
-   
+
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
-  #        
+  #
   analytics :
-    provider : google 
-    google : 
+    provider : google
+    google :
         tracking_id : 'UA-123-12'
     getclicky :
-      site_id : 
+      site_id :
     mixpanel :
         token : '_MIXPANEL_TOKEN_'
     piwik :
         baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
         idsite : '1'                   # the id of the site on Piwik
 
-  # Settings for sharing helper. 
+  # Settings for sharing helper.
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
   # Set 'provider' to the sharing provider you want to use.
   # Set 'provider' to false to turn sharing off globally.
   #
   sharing :
     provider : false
-    
-  # Settings for all other include helpers can be defined by creating 
+
+  # Settings for all other include helpers can be defined by creating
   # a hash with key named for the given helper. ex:
   #
   #   pages_list :
-  #     provider : "custom"   
+  #     provider : "custom"
   #
   # Setting any helper's provider to 'custom' will bypass the helper code
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-  
