--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,6 @@ author :
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
 production_url : http://kristanarmstrong.github.io/recherchetravel.github.com
-baseurl: '/recherchetravel.github.com'
 
 ### Picture Gallery ###
 gallery:
@@ -93,7 +92,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : false
+  BASE_PATH : "http://kristanarmstrong.github.io/recherchetravel.github.com"
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
