--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ production_url : http://kristanarmstrong.github.io/recherchetravel.github.com
 ### Picture Gallery ###
 gallery:
   # path to the gallery
-  dir: pictures
+  dir: photos
   # title for gallery index
   title: "Photos"
   # title prefix for gallery page. title=title_prefix+gallery_name
@@ -92,7 +92,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : "http://kristanarmstrong.github.io/recherchetravel.github.com"
+  BASE_PATH : http://kristanarmstrong.github.io/recherchetravel.github.com
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -102,7 +102,7 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : false
+  ASSET_PATH : http://kristanarmstrong.github.io/recherchetravel.github.com/assets/themes/bootstrap-3
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
